tests/test_default/bad/output/empty.catala_en.A.Interpret
[ERROR] This variable evaluated to an empty term (no rule that defined it applied in this situation)

 --> tests/test_default/bad/empty.catala_en
  | 
6 |   context y content boolean
  |           ^
  + Article
